--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -13,189 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>exclude</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Authors</th>\n",
-       "      <th>Publication Type</th>\n",
-       "      <th>SourceTitle</th>\n",
-       "      <th>Publication Year</th>\n",
-       "      <th>Keywords</th>\n",
-       "      <th>UT</th>\n",
-       "      <th>DOI</th>\n",
-       "      <th>ISSN</th>\n",
-       "      <th>source</th>\n",
-       "      <th>Abstract</th>\n",
-       "      <th>PMID</th>\n",
-       "      <th>URL</th>\n",
-       "      <th>Publication Type Other</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Unravelling the molecular dimensions of atmosp...</td>\n",
-       "      <td>Nazeer, Nazim; Bhargava, Arpit; Soni, Nikita; ...</td>\n",
-       "      <td>Article</td>\n",
-       "      <td>PHYSICS AND CHEMISTRY OF THE EARTH</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Air pollution, Artificial intelligence, Enviro...</td>\n",
-       "      <td>WOS</td>\n",
-       "      <td>10.1016/j.pce.2024.103604</td>\n",
-       "      <td>1474-7065</td>\n",
-       "      <td>WOK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Exploring the influence of indoor environment ...</td>\n",
-       "      <td>Ma, Chuan; Guerra-Santin, Olivia; Mohammadi, Masi</td>\n",
-       "      <td>Article</td>\n",
-       "      <td>BUILDING AND ENVIRONMENT</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Nursing home, Indoor environment, Spatial layo...</td>\n",
-       "      <td>WOS</td>\n",
-       "      <td>10.1016/j.buildenv.2024.111452</td>\n",
-       "      <td>0360-1323</td>\n",
-       "      <td>WOK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>True</td>\n",
-       "      <td>Semi-supervised ensemble learning for human ac...</td>\n",
-       "      <td>Patricia, Ariza-Colpas Paola; Rosberg, Pacheco...</td>\n",
-       "      <td>Article</td>\n",
-       "      <td>HELIYON</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Human activity recognition, Activities of dail...</td>\n",
-       "      <td>WOS</td>\n",
-       "      <td>10.1016/j.heliyon.2024.e29398</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WOK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>A fast analysis approach for crop health monit...</td>\n",
-       "      <td>Antony, Maria Merin; Sandeep, C. S. Suchand; B...</td>\n",
-       "      <td>Proceedings</td>\n",
-       "      <td>PHOTONIC TECHNOLOGIES IN PLANT AND AGRICULTURA...</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>hyperspectral imaging, crop monitoring, vegeta...</td>\n",
-       "      <td>WOS</td>\n",
-       "      <td>10.1117/12.3008428</td>\n",
-       "      <td>0277-786X</td>\n",
-       "      <td>WOK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Optimising Mechanical Ventilation for Indoor A...</td>\n",
-       "      <td>Rizzo, Krista; Camilleri, Mark; Gatt, Damien; ...</td>\n",
-       "      <td>Article</td>\n",
-       "      <td>SUSTAINABILITY</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>indoor air quality, ventilation in schools, CO...</td>\n",
-       "      <td>WOS</td>\n",
-       "      <td>10.3390/su16020766</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>WOK</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  exclude                                              Title  \\\n",
-       "0    True  Unravelling the molecular dimensions of atmosp...   \n",
-       "1     NaN  Exploring the influence of indoor environment ...   \n",
-       "2    True  Semi-supervised ensemble learning for human ac...   \n",
-       "3    True  A fast analysis approach for crop health monit...   \n",
-       "4     NaN  Optimising Mechanical Ventilation for Indoor A...   \n",
-       "\n",
-       "                                             Authors Publication Type  \\\n",
-       "0  Nazeer, Nazim; Bhargava, Arpit; Soni, Nikita; ...          Article   \n",
-       "1  Ma, Chuan; Guerra-Santin, Olivia; Mohammadi, Masi          Article   \n",
-       "2  Patricia, Ariza-Colpas Paola; Rosberg, Pacheco...          Article   \n",
-       "3  Antony, Maria Merin; Sandeep, C. S. Suchand; B...      Proceedings   \n",
-       "4  Rizzo, Krista; Camilleri, Mark; Gatt, Damien; ...          Article   \n",
-       "\n",
-       "                                         SourceTitle  Publication Year  \\\n",
-       "0                 PHYSICS AND CHEMISTRY OF THE EARTH              2024   \n",
-       "1                           BUILDING AND ENVIRONMENT              2024   \n",
-       "2                                            HELIYON              2024   \n",
-       "3  PHOTONIC TECHNOLOGIES IN PLANT AND AGRICULTURA...              2024   \n",
-       "4                                     SUSTAINABILITY              2024   \n",
-       "\n",
-       "                                            Keywords   UT  \\\n",
-       "0  Air pollution, Artificial intelligence, Enviro...  WOS   \n",
-       "1  Nursing home, Indoor environment, Spatial layo...  WOS   \n",
-       "2  Human activity recognition, Activities of dail...  WOS   \n",
-       "3  hyperspectral imaging, crop monitoring, vegeta...  WOS   \n",
-       "4  indoor air quality, ventilation in schools, CO...  WOS   \n",
-       "\n",
-       "                              DOI       ISSN source Abstract  PMID  URL  \\\n",
-       "0       10.1016/j.pce.2024.103604  1474-7065    WOK      NaN   NaN  NaN   \n",
-       "1  10.1016/j.buildenv.2024.111452  0360-1323    WOK      NaN   NaN  NaN   \n",
-       "2   10.1016/j.heliyon.2024.e29398        NaN    WOK      NaN   NaN  NaN   \n",
-       "3              10.1117/12.3008428  0277-786X    WOK      NaN   NaN  NaN   \n",
-       "4              10.3390/su16020766        NaN    WOK      NaN   NaN  NaN   \n",
-       "\n",
-       "  Publication Type Other  \n",
-       "0                    NaN  \n",
-       "1                    NaN  \n",
-       "2                    NaN  \n",
-       "3                    NaN  \n",
-       "4                    NaN  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(953, 15)\n",
+      "(953, 14)\n",
+      "(953, 14)\n",
+      "(953, 33)\n",
+      "Index(['exclude_bli', 'Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
+      "       'Publication Year', 'Keywords_x', 'UT_x', 'DOI', 'ISSN_x', 'source_x',\n",
+      "       'Abstract_x', 'PMID_x', 'URL_x', 'Publication Type Other_x',\n",
+      "       'exclude_reza', 'Keywords_y', 'UT_y', 'ISSN_y', 'source_y',\n",
+      "       'Abstract_y', 'PMID_y', 'URL_y', 'Publication Type Other_y',\n",
+      "       'exclude_farzin', 'Keywords', 'UT', 'ISSN', 'source', 'Abstract',\n",
+      "       'PMID', 'URL', 'Publication Type Other'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
@@ -207,14 +44,184 @@
     "# bli and reza use 'T', farzin uses '1' for true\n",
     "# replace with boolean\n",
     "bli['exclude'] = bli['exclude'].replace({'T': True, 'F': False})\n",
-    "# replace NaN in bli with False since all was reviewed\n",
-    "bli['exclude'] = bli['exclude'].fillna(False)\n",
-    "\n",
     "reza['exclude'] = reza['exclude'].replace({'T': True, 'F': False})\n",
     "farzin['exclude'] = farzin['exclude'].replace({1: True, 0: False})\n",
     "\n",
+    "# rename to exclude_bli, exclude_reza, exclude_farzin\n",
+    "bli = bli.rename(columns={'exclude': 'exclude_bli'})\n",
+    "reza = reza.rename(columns={'exclude': 'exclude_reza'})\n",
+    "farzin = farzin.rename(columns={'exclude': 'exclude_farzin'})\n",
     "\n",
-    "bli.head()\n"
+    "# Title in farzin's includes weird symbols, drop it\n",
+    "farzin = farzin.drop(columns=['Title'])\n",
+    "reza = reza.drop(columns=['Title'])\n",
+    "# merge on 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year' and 'DOI'\n",
+    "merged = bli.merge(reza, on=['Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI']).merge(farzin, on=['Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI'])\n",
+    "\n",
+    "\n",
+    "# print shape of each dataframe\n",
+    "print(bli.shape)\n",
+    "print(reza.shape)\n",
+    "print(farzin.shape)\n",
+    "\n",
+    "print(merged.shape)\n",
+    "print(merged.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zd/_7gwj5650vb4smtfpkjw268h0000gn/T/ipykernel_39308/3923723225.py:8: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  merged[exclude_columns] = merged[exclude_columns].fillna(False)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
+       "       'Publication Year', 'DOI', 'Keywords', 'UT', 'ISSN', 'source',\n",
+       "       'Abstract', 'PMID', 'URL', 'Publication Type Other', 'exclude_bli',\n",
+       "       'exclude_reza', 'exclude_farzin'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop columns that end in _y and _x\n",
+    "merged = merged.drop(columns=[c for c in merged.columns if c.endswith('_x')])\n",
+    "merged = merged.drop(columns=[c for c in merged.columns if c.endswith('_y')])\n",
+    "# move exclude_ columns to the end\n",
+    "exclude_columns = [c for c in merged.columns if c.startswith('exclude')]\n",
+    "merged = merged[[c for c in merged.columns if c not in exclude_columns] + exclude_columns]\n",
+    "# fill NaN with False for exclude columns\n",
+    "merged[exclude_columns] = merged[exclude_columns].fillna(False)\n",
+    "merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bli: 740\n",
+      "reza: 175\n",
+      "farzin: 277\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many are excluded by each source\n",
+    "print(f'bli: {merged[merged[\"exclude_bli\"]].shape[0]}')\n",
+    "print(f'reza: {merged[merged[\"exclude_reza\"]].shape[0]}')\n",
+    "print(f'farzin: {merged[merged[\"exclude_farzin\"]].shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "by_all\n",
+      "False    866\n",
+      "True      87\n",
+      "Name: count, dtype: int64\n",
+      "Size: (866, 20), By bli and reza: by_bli_reza\n",
+      "False    791\n",
+      "True      75\n",
+      "Name: count, dtype: int64\n",
+      "Size: (791, 19), By bli and farzin: by_bli_farzin\n",
+      "False    623\n",
+      "True     168\n",
+      "Name: count, dtype: int64\n",
+      "(623, 18)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many rows are excluded by all three?\n",
+    "# print(merged[(merged['exclude_bli'] == True) & (merged['exclude_reza'] == True) & (merged['exclude_farzin'] == True)].shape)\n",
+    "\n",
+    "# create new column 'by_all' that is True if all exclude columns are True\n",
+    "merged['by_all'] = merged[exclude_columns].all(axis=1)\n",
+    "# rows excluded by both bli and reza\n",
+    "merged['by_bli_reza'] = (merged['exclude_bli'] == True) & (merged['exclude_reza'] == True)\n",
+    "# rows excluded by both bli and farzin\n",
+    "merged['by_bli_farzin'] = (merged['exclude_bli'] == True) & (merged['exclude_farzin'] == True)\n",
+    "# rows excluded by both reza and farzin\n",
+    "merged['by_reza_farzin'] = (merged['exclude_reza'] == True) & (merged['exclude_farzin'] == True)\n",
+    "\n",
+    "# print counts\n",
+    "print(merged['by_all'].value_counts())\n",
+    "# drop rows excluded by all three\n",
+    "merged = merged[merged['by_all'] == False]\n",
+    "# drop columns\n",
+    "merged = merged.drop(columns=['by_all'])\n",
+    "\n",
+    "print(f'Size: {merged.shape}, By bli and reza: {merged[\"by_bli_reza\"].value_counts()}')\n",
+    "merged = merged[merged['by_bli_reza'] == False]\n",
+    "merged = merged.drop(columns=['by_bli_reza'])\n",
+    "\n",
+    "print(f'Size: {merged.shape}, By bli and farzin: {merged[\"by_bli_farzin\"].value_counts()}')\n",
+    "merged = merged[merged['by_bli_farzin'] == False]\n",
+    "merged = merged.drop(columns=['by_bli_farzin'])\n",
+    "\n",
+    "print(merged.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size: (623, 18), By reza and farzin: by_reza_farzin\n",
+      "False    619\n",
+      "True       4\n",
+      "Name: count, dtype: int64\n",
+      "bli: 410\n",
+      "reza: 13\n",
+      "farzin: 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many are excluded by reza and farzin?\n",
+    "print(f'Size: {merged.shape}, By reza and farzin: {merged[\"by_reza_farzin\"].value_counts()}')\n",
+    "# how many are excluded by each source\n",
+    "print(f'bli: {merged[merged[\"exclude_bli\"]].shape[0]}')\n",
+    "print(f'reza: {merged[merged[\"exclude_reza\"]].shape[0]}')\n",
+    "print(f'farzin: {merged[merged[\"exclude_farzin\"]].shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to csv\n",
+    "merged.to_csv('literature/merged.csv', index=False)"
    ]
   },
   {
