--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merged 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,16 +28,16 @@
      "output_type": "stream",
      "text": [
       "(953, 15)\n",
-      "(953, 14)\n",
-      "(953, 14)\n",
-      "(953, 33)\n",
+      "(623, 15)\n",
+      "(628, 15)\n",
+      "(615, 33)\n",
       "Index(['exclude_bli', 'Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
       "       'Publication Year', 'Keywords_x', 'UT_x', 'DOI', 'ISSN_x', 'source_x',\n",
       "       'Abstract_x', 'PMID_x', 'URL_x', 'Publication Type Other_x',\n",
-      "       'exclude_reza', 'Keywords_y', 'UT_y', 'ISSN_y', 'source_y',\n",
-      "       'Abstract_y', 'PMID_y', 'URL_y', 'Publication Type Other_y',\n",
-      "       'exclude_farzin', 'Keywords', 'UT', 'ISSN', 'source', 'Abstract',\n",
-      "       'PMID', 'URL', 'Publication Type Other'],\n",
+      "       'Keywords_y', 'UT_y', 'ISSN_y', 'source_y', 'Abstract_y', 'PMID_y',\n",
+      "       'URL_y', 'Publication Type Other_y', 'exclude_reza', 'exclude_farzin',\n",
+      "       'Keywords', 'UT', 'ISSN', 'source', 'Abstract', 'PMID', 'URL',\n",
+      "       'Publication Type Other'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -221,15 +228,70 @@
    "outputs": [],
    "source": [
     "# to csv\n",
-    "merged.to_csv('literature/merged.csv', index=False)"
+    "merged.to_csv('literature/merged1.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merged 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(623, 15)\n",
+      "(623, 15)\n",
+      "(628, 15)\n",
+      "(615, 33)\n",
+      "Index(['Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
+      "       'Publication Year', 'DOI', 'Keywords_x', 'UT_x', 'ISSN_x', 'source_x',\n",
+      "       'Abstract_x', 'PMID_x', 'URL_x', 'Publication Type Other_x',\n",
+      "       'exclude_bli', 'Keywords_y', 'UT_y', 'ISSN_y', 'source_y', 'Abstract_y',\n",
+      "       'PMID_y', 'URL_y', 'Publication Type Other_y', 'exclude_reza',\n",
+      "       'exclude_farzin', 'Keywords', 'UT', 'ISSN', 'source', 'Abstract',\n",
+      "       'PMID', 'URL', 'Publication Type Other'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read in bli_wb2_set.csv, reza_wb2_set.csv, and farzin_wb2_set.csv from literature\n",
+    "df = pd.read_csv('literature/merged1.csv')\n",
+    "reza = pd.read_csv('literature/reza_wb2_set2.csv')\n",
+    "farzin = pd.read_csv('literature/farzin_wb2_set2.csv')\n",
+    "\n",
+    "\n",
+    "# drop exclude_reza and exclude_farzin and by_reza_farzin\n",
+    "df = df.drop(columns=['exclude_reza', 'exclude_farzin', 'by_reza_farzin'])\n",
+    "\n",
+    "# bli and reza use 'T', farzin uses '1' for true\n",
+    "# replace with boolean\n",
+    "farzin['exclude'] = farzin['exclude'].replace({1: True, 0: False})\n",
+    "\n",
+    "# rename to exclude_bli, exclude_reza, exclude_farzin\n",
+    "reza = reza.rename(columns={'exclude': 'exclude_reza'})\n",
+    "farzin = farzin.rename(columns={'exclude': 'exclude_farzin'})\n",
+    "\n",
+    "# merge on 'Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year' and 'DOI'\n",
+    "merged = df.merge(reza, on=['Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI']).merge(farzin, on=['Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI'])\n",
+    "\n",
+    "\n",
+    "# print shape of each dataframe\n",
+    "print(df.shape)\n",
+    "print(reza.shape)\n",
+    "print(farzin.shape)\n",
+    "\n",
+    "print(merged.shape)\n",
+    "print(merged.columns)"
+   ]
   }
  ],
  "metadata": {
