--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -77,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zd/_7gwj5650vb4smtfpkjw268h0000gn/T/ipykernel_39308/3923723225.py:8: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/w9/kdq4wyw97jn4cg1bhrvrq8j80000gn/T/ipykernel_12850/3923723225.py:8: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  merged[exclude_columns] = merged[exclude_columns].fillna(False)\n"
      ]
     },
@@ -151,7 +151,11 @@
       "False    623\n",
       "True     168\n",
       "Name: count, dtype: int64\n",
-      "(623, 18)\n"
+      "Size: (623, 18), By reza and farzin: by_reza_farzin\n",
+      "False    619\n",
+      "True       4\n",
+      "Name: count, dtype: int64\n",
+      "(619, 17)\n"
      ]
     }
    ],
@@ -183,6 +187,10 @@
     "merged = merged[merged['by_bli_farzin'] == False]\n",
     "merged = merged.drop(columns=['by_bli_farzin'])\n",
     "\n",
+    "print(f'Size: {merged.shape}, By reza and farzin: {merged[\"by_reza_farzin\"].value_counts()}')\n",
+    "merged = merged[merged['by_reza_farzin'] == False]\n",
+    "merged = merged.drop(columns=['by_reza_farzin'])\n",
+    "\n",
     "print(merged.shape)"
    ]
   },
@@ -195,19 +203,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size: (623, 18), By reza and farzin: by_reza_farzin\n",
-      "False    619\n",
-      "True       4\n",
-      "Name: count, dtype: int64\n",
       "bli: 410\n",
-      "reza: 13\n",
-      "farzin: 22\n"
+      "reza: 9\n",
+      "farzin: 18\n"
      ]
     }
    ],
    "source": [
-    "# how many are excluded by reza and farzin?\n",
-    "print(f'Size: {merged.shape}, By reza and farzin: {merged[\"by_reza_farzin\"].value_counts()}')\n",
     "# how many are excluded by each source\n",
     "print(f'bli: {merged[merged[\"exclude_bli\"]].shape[0]}')\n",
     "print(f'reza: {merged[merged[\"exclude_reza\"]].shape[0]}')\n",
@@ -221,7 +223,7 @@
    "outputs": [],
    "source": [
     "# to csv\n",
-    "merged.to_csv('literature/merged.csv', index=False)"
+    "merged.to_csv('literature/merged1.csv', index=False)"
    ]
   },
   {
