--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used all exclusion criteria that can be coded. Reviewed through title."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -236,6 +243,13 @@
    "metadata": {},
    "source": [
     "# Merged 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reviewed title and keywords."
    ]
   },
   {
@@ -458,6 +472,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merged 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reviewed abstract."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(224, 15)\n",
+      "(224, 15)\n",
+      "(224, 15)\n",
+      "(224, 33)\n",
+      "Index(['Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
+      "       'Publication Year', 'DOI', 'Keywords_x', 'UT_x', 'ISSN_x', 'source_x',\n",
+      "       'Abstract_x', 'PMID_x', 'URL_x', 'Publication Type Other_x',\n",
+      "       'exclude_bli', 'Keywords_y', 'UT_y', 'ISSN_y', 'source_y', 'Abstract_y',\n",
+      "       'PMID_y', 'URL_y', 'Publication Type Other_y', 'exclude_reza',\n",
+      "       'Keywords', 'UT', 'ISSN', 'source', 'Abstract', 'PMID', 'URL',\n",
+      "       'Publication Type Other', 'exclude_farzin'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read in bli_wb2_set.csv, reza_wb2_set.csv, and farzin_wb2_set.csv from literature\n",
+    "bli = pd.read_csv('literature/bli_wb2_set3.csv')\n",
+    "reza = pd.read_csv('literature/reza_wb2_set3.csv')\n",
+    "farzin = pd.read_csv('literature/farzin_wb2_set3.csv')\n",
+    "\n",
+    "\n",
+    "# drop exclude_reza and exclude_farzin and by_reza_farzin\n",
+    "# df = df.drop(columns=['exclude_reza', 'exclude_farzin', 'by_reza_farzin'])\n",
+    "\n",
+    "# merge on 'Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year' and 'DOI'\n",
+    "merged = bli.merge(reza, on=['Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI']).merge(farzin, on=['Title', 'Authors', 'Publication Type', 'SourceTitle', 'Publication Year', 'DOI'])\n",
+    "\n",
+    "# replace with boolean\n",
+    "merged['exclude_bli'] = merged['exclude_bli'].replace({1: True, 0: False})\n",
+    "merged['exclude_reza'] = merged['exclude_reza'].replace({1: True, 0: False})\n",
+    "merged['exclude_farzin'] = merged['exclude_farzin'].replace({1: True, 0: False})\n",
+    "\n",
+    "# print shape of each dataframe\n",
+    "print(bli.shape)\n",
+    "print(reza.shape)\n",
+    "print(farzin.shape)\n",
+    "\n",
+    "print(merged.shape)\n",
+    "print(merged.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/w9/kdq4wyw97jn4cg1bhrvrq8j80000gn/T/ipykernel_41091/3923723225.py:8: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  merged[exclude_columns] = merged[exclude_columns].fillna(False)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Title', 'Authors', 'Publication Type', 'SourceTitle',\n",
+       "       'Publication Year', 'DOI', 'Keywords', 'UT', 'ISSN', 'source',\n",
+       "       'Abstract', 'PMID', 'URL', 'Publication Type Other', 'exclude_bli',\n",
+       "       'exclude_reza', 'exclude_farzin'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop columns that end in _y and _x\n",
+    "merged = merged.drop(columns=[c for c in merged.columns if c.endswith('_x')])\n",
+    "merged = merged.drop(columns=[c for c in merged.columns if c.endswith('_y')])\n",
+    "# move exclude_ columns to the end\n",
+    "exclude_columns = [c for c in merged.columns if c.startswith('exclude')]\n",
+    "merged = merged[[c for c in merged.columns if c not in exclude_columns] + exclude_columns]\n",
+    "# fill NaN with False for exclude columns\n",
+    "merged[exclude_columns] = merged[exclude_columns].fillna(False)\n",
+    "merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bli: 57\n",
+      "reza: 24\n",
+      "farzin: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how many are excluded by each source\n",
+    "print(f'bli: {merged[merged[\"exclude_bli\"]].shape[0]}')\n",
+    "print(f'reza: {merged[merged[\"exclude_reza\"]].shape[0]}')\n",
+    "print(f'farzin: {merged[merged[\"exclude_farzin\"]].shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(104, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# drop rows excluded by any source\n",
+    "merged = merged[~(merged['exclude_bli'] | merged['exclude_reza'] | merged['exclude_farzin'])]\n",
+    "# how many rows left\n",
+    "print(merged.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove all columns with 'exclude' in the name\n",
+    "merged = merged.drop(columns=[c for c in merged.columns if 'exclude_' in c])\n",
+    "# add 'exclude' column with NA\n",
+    "merged['exclude'] = np.nan\n",
+    "# to csv\n",
+    "merged.to_csv('literature/wb2_set4.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -481,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
