--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -698,9 +698,9 @@
      "output_type": "stream",
      "text": [
       "exclude\n",
-      "0.0    49\n",
-      "2.0    30\n",
-      "3.0    19\n",
+      "2.0    42\n",
+      "0.0    34\n",
+      "3.0    22\n",
       "1.0     6\n",
       "Name: count, dtype: int64\n"
      ]
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert a column called modification after exclude\n",
+    "merged.insert(merged.columns.get_loc('exclude') + 1, 'modification', np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
